# shorty

./: .bazeliskrc  .bazelrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff.toml  BUILD  BUILD.bazel  LICENSE  MODULE.bazel  README.bazel.md  README.md  REPO.bazel  WORKSPACE.bazel  WORKSPACE.bzlmod  app.py  app_create_link_test.py  app_get_root_test.py  app_test.py  conftest.py  gazelle_python.yaml  mypy.ini  py_layer.bzl  pyproject.toml  requirements.base.in  requirements.base.txt  requirements.test.txt  test_app.py
.aspect/cli/: config.yaml  py3_image.star  shell.star
.aspect/workflows/: config.yaml
.github/workflows/: weekly_tag.yaml
app/: BUILD  __main__.py  test_app.py
app/templates/: create.html.j2
container/: BUILD.bazel  py_layer.bzl
requirements/: BUILD.bazel  all.txt  base.in  base.txt  dev.in  dev.txt  runtime.txt  test.in  test.txt  tools.in
templates/: create.html.jinja
tools/: BUILD  repin
tools/format/: BUILD  BUILD.bazel
tools/lint/: BUILD  BUILD.bazel  linters.bzl
tools/oci/: py3_image.bzl
