load("@rules_oci//oci:defs.bzl", "oci_load")
load("//container:py_layer.bzl", "py_oci_image")

py_oci_image(
    name = "oci_image",
    base = "@ubuntu",
    binary = "//:app",
    entrypoint = ["/app"],
)

oci_load(
    name = "load",
    image = ":oci_image",
    repo_tags = ["shorty:latest"],
)
