load("@rules_uv//uv:pip.bzl", "pip_compile")

pip_compile(
    name = "compile_base_deps",
    args = ["--no-build"],
    requirements_in = "base.in",
    requirements_txt = "base.txt",
)

[
    pip_compile(
        name = "compile_{}_deps".format(i),
        args = ["--no-build"],
        data = ["base.txt"],
        requirements_in = "{}.in".format(i),
        requirements_txt = "{}.txt".format(i),
    )
    for i in ("test", "dev")
]
