# https://github.com/aspect-build/rules_lint/blob/0ad77ff/example/tools/lint/BUILD.bazel
"""Definition of the formatter binary

This is in its own package because it has so many loading-time symbols,
we don't want to trigger eager fetches of these for builds that don't want to run format.
"""

package(default_visibility = ["//visibility:public"])
